--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@
   -webkit-touch-callout: none;
 }
 
+h1, h2, h3, h4, h5, h6, p, span, small {
+  color: #ffffff;
+}
+
 a, button, .icon, img {
   user-select: none;
   background: none;
