--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   -webkit-touch-callout: none;
 }
 
-h1, h2, h3, h4, h5, h6, p, span, small {
+h1, h2, h3, h4, h5, h6, p, span, small, li {
   color: #ffffff;
 }
 
